--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Us</h1>
-                    <p>Geoin Land Surveying ltd of GIS Solutions is a company that provides land surveying services such as topographical surveys, beacon establishment, land transfers, transactions and succession and property and land consultant.</p>
+                    <p>CT-Hub is a company that provides Digital services and Solutions such as Web development, Mobile App Development, Desktop software development and other IT related solutions</p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('location')">Location</p>
                     <p class="tab-links" onclick="opentab('mission')">Our Mission</p>
