--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <!-- Vision -->
                 <div class="tab-contents" id="vision">
                     <ul>
-                        <li><span>OUR VISON IS: </span>We are a team of passionate and skilled professionals who provide innovative and reliable solutions for the digital security and development needs of our clients. We aim to protect, enhance, and empower the online presence and performance of businesses and organizations across various sectors and domains. We value integrity, excellence, and customer satisfaction in everything we do.</li>
+                        <li><span>OUR VISON IS: </span>To provide innovative and reliable solutions for the digital security and development needs of our clients. We aim to protect, enhance, and empower the online presence and performance of businesses and organizations across various sectors and domains. We value integrity, excellence, and customer satisfaction in everything we do.</li>
                     </ul>
                 </div>
                 <!-- </div> -->
