--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <!-- Location -->
                 <div class="tab-contents active-tab" id="location">
                     <ul>
-                        <li><span>NYERI TOWN <i class="fa-solid fa-location-dot"></i></span><br>PEAK BUSINESS CENTER</li>
-                        <li><span>OPPOSITE</span><br>absa BANK</li>
-                        <li><span>FLOOR</span><br>2ND FLOOR ROOM NO.5</li>
+                        <li><span>NYERI TOWN <i class="fa-solid fa-location-dot"></i></span><br>------</li>
+                        <li><span>OPPOSITE</span><br>------</li>
+                        <li><span>FLOOR</span><br>------</li>
                     </ul>
                 </div>
 
